--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 
         <div class="main-container">
             <h1>My Battleship</h1>
-
+                <div class="card">
+                    <div class="container">
+                        <h4><b>Qui doit commencer la partie ?</b></h4>
+                        <div class="btn-container">
+                            <span class="btn confirm-ok" id='firstP-Moi'>Moi</span>
+                            <span class="btn confirm-ok" id='firstP-Ordinateur'>Ordinateur</span>
+                            <span class="btn confirm-ok" id='firstP-Aleatoire'>Aleatoire</span>
+                        </div>
+                    </div>
+                </div>
             <div class="left column">
                 
                 <div class="game-info"></div>
