--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="main-container">
             <h1>My Battleship</h1>
-
+            <iframe width="110" height="200" src="https://www.myinstants.com/instant/sardoche-concentres-toi-64352/embed/" frameborder="0" scrolling="no"></iframe>
             <div class="left column">
                 
                 <div class="game-info"></div>
